Add progress monitoring and retry logic for transient errors
This commit introduces two major improvements:

1. Shared Progress Monitoring System
   - Created ProgressMonitor utility class for tracking reorganization progress
   - Displays live progress updates in both popup and folder-selector pages
   - Added centered progress modal to folder-selector with spinner and status
   - Prevents race conditions with hasSeenProgress flag
   - Automatically restores monitoring state if page is reopened during reorganization

2. Transient Error Retry Logic
   - Extended LLMService retry logic to handle JSON parse errors
   - Now retries on "Unexpected end of JSON input" and other parse failures
   - Up to 5 retries with exponential backoff (2s, 4s, 8s, 16s, 30s)
   - Faster backoff for parse errors vs rate limits
   - Better error logging distinguishes between rate limits and transient errors

Files changed:
- src/shared/ProgressMonitor.ts: New shared progress monitoring utility
- folder-selector.html: Added progress modal UI
- src/folder-selector/folder-selector.ts: Integrated ProgressMonitor
- src/popup/popup.ts: Refactored to use ProgressMonitor
- src/services/LLMService.ts: Added retry logic for parse errors

Benefits:
- Eliminates code duplication between popup and folder-selector
- More resilient to transient API failures
- Better user experience with live progress updates
- Consistent progress display across all pages

--- a/folder-selector.html
+++ b/folder-selector.html
@@ -517,6 +517,69 @@
                 width: 100%;
             }
         }
+
+        /* Progress Modal */
+        .progress-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: rgba(0, 0, 0, 0.7);
+            display: none;
+            align-items: center;
+            justify-content: center;
+            z-index: 2000;
+        }
+
+        .progress-overlay.active {
+            display: flex;
+        }
+
+        .progress-modal {
+            background: white;
+            border-radius: 16px;
+            padding: 40px;
+            max-width: 500px;
+            width: 90%;
+            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5);
+            text-align: center;
+        }
+
+        .progress-spinner {
+            width: 60px;
+            height: 60px;
+            margin: 0 auto 30px;
+            border: 6px solid #f3f3f3;
+            border-top: 6px solid #667eea;
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+
+        .progress-title {
+            font-size: 1.5em;
+            font-weight: 700;
+            color: #333;
+            margin-bottom: 15px;
+        }
+
+        .progress-message {
+            font-size: 1em;
+            color: #666;
+            margin-bottom: 10px;
+            min-height: 24px;
+        }
+
+        .progress-count {
+            font-size: 0.9em;
+            color: #999;
+            font-weight: 500;
+        }
     </style>
 </head>
 <body>
@@ -609,6 +672,16 @@
                 <button id="confirm-cancel-btn" class="btn btn-secondary">Cancel</button>
                 <button id="confirm-proceed-btn" class="btn btn-danger">Proceed</button>
             </div>
+        </div>
+    </div>
+
+    <!-- Progress Modal -->
+    <div id="progress-overlay" class="progress-overlay">
+        <div class="progress-modal">
+            <div class="progress-spinner"></div>
+            <div class="progress-title">Organizing Bookmarks</div>
+            <div id="progress-message" class="progress-message">Initializing...</div>
+            <div id="progress-count" class="progress-count">0 of 0 items</div>
         </div>
     </div>
 
