Fix accounting bugs and reduce non-critical error logging
This commit addresses two main issues:

1. Accounting/Results Display:
   - Add missing bookmarksAlreadyOrganized field to stored results in background.ts
   - Fix KEEP_CURRENT being added to folders to create in ReorganizationService
   - Add error logging for missing bookmark IDs
   - Count failed bookmark moves as skipped
   - Update results.html labels: "Previously Organized (Skipped)" → "Intentionally Skipped"
   - Add tooltips to results page labels explaining what they mean

2. Error Logging Levels:
   - Downgrade transient/retryable errors from ERROR to WARN in LLMService
   - Only log as ERROR for truly catastrophic, unrecoverable failures
   - Retryable conditions now logged as WARN: rate limits (429), server errors (5xx), JSON parse failures
   - Prevents extension from showing errors in Chrome's Extensions page for handled failures

This ensures accurate reporting of organization results and reduces noise in Chrome's error logs.

--- a/results.html
+++ b/results.html
@@ -431,7 +431,7 @@
             </div>
             <div class="stat-card">
                 <div class="stat-number" id="stat-already-organized">0</div>
-                <div class="stat-label">Already Organized</div>
+                <div class="stat-label" style="cursor: help;" title="Bookmarks that the AI determined are already in a good location and don't need to be moved">Already Organized</div>
             </div>
             <div class="stat-card">
                 <div class="stat-number" id="stat-folders">0</div>
@@ -443,7 +443,7 @@
             </div>
             <div class="stat-card">
                 <div class="stat-number" id="stat-skipped">0</div>
-                <div class="stat-label">Previously Organized (Skipped)</div>
+                <div class="stat-label" style="cursor: help;" title="Bookmarks that were skipped based on your organization history settings to avoid re-organizing the same bookmarks">Intentionally Skipped</div>
             </div>
         </div>
 
